[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/ui/titles/labyrinth_title.png" type="Texture" id=1]
[ext_resource path="res://mainmenu/BaseBtn.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/themes/kenneyUI-red.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/VCRosdNEUE.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/shaders/starfield_shader_v5.gdshader" type="Shader" id=5]
[ext_resource path="res://minigames/labyrinthofrule3/ui/StartScreen.gd" type="Script" id=6]
[ext_resource path="res://assets/themes/kenneyUI-blue.tres" type="Theme" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/dimensions = Vector2( 1024, 600 )
shader_param/small_stars = 50.0
shader_param/small_stars_far_size = 0.5
shader_param/small_stars_near_size = 1.0
shader_param/large_stars = 8.0
shader_param/large_stars_far_size = 0.5
shader_param/large_stars_near_size = 1.0
shader_param/far_stars_color = Color( 0.5, 0, 1, 1 )
shader_param/near_stars_color = Color( 1, 1, 1, 1 )
shader_param/base_scroll_speed = 0.05
shader_param/additional_scroll_speed = 0.05

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.701961, 0.847059, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=5]
Panel/styles/panel = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 2
outline_color = Color( 0.290196, 0.941176, 0.976471, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 4 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 545.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 315.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Separator1" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 319.0
margin_right = 824.0
margin_bottom = 339.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 343.0
margin_right = 824.0
margin_bottom = 367.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Answer correctly all 5 questions while dodging the enemies to win!"
align = 1

[node name="Separator2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 371.0
margin_right = 824.0
margin_bottom = 391.0
rect_min_size = Vector2( 0, 20 )

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 395.0
margin_right = 824.0
margin_bottom = 445.0
custom_constants/hseparation = 70
columns = 3

[node name="BackBtn" parent="CanvasLayer/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_right = 228.0
margin_bottom = 50.251
text = "BACK TO MENU"
next_scene_path = "res://mainmenu/MinigameSelectScene.tscn"

[node name="StartBtn" parent="CanvasLayer/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 298.0
margin_right = 526.0
margin_bottom = 50.251
text = "START"
next_scene_path = "res://minigames/labyrinthofrule3/levels/Level0.tscn"

[node name="Info" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 596.0
margin_right = 824.0
margin_bottom = 50.251
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "HOW TO PLAY"

[node name="Panel" type="Panel" parent="CanvasLayer/MarginContainer"]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 545.0
theme = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 787.0
margin_bottom = 407.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 737.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "How to Play!!"
align = 1

[node name="Separator" type="Control" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 737.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 20 )

[node name="Instructions" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 737.0
margin_bottom = 279.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "1. A question will appear in the top of your screen!!

2. The four possible answers are represented by a corner!!

3. Reach a corner and pick their flag to choose an answer!

4. Dodge the enemies and have fun!! "
align = 1

[node name="Separator2" type="Control" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 283.0
margin_right = 737.0
margin_bottom = 303.0
rect_min_size = Vector2( 50, 20 )

[node name="Close" type="Button" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_left = 326.0
margin_top = 307.0
margin_right = 410.324
margin_bottom = 357.251
size_flags_horizontal = 4
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Close"

[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/GridContainer/Info" to="." method="_on_Info_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/GridContainer/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/GridContainer/Info" to="." method="_on_Info_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Close" to="." method="_on_Close_pressed"]
